new reference API pulls cards from db
